<resources>

    <string name="app_name">Weather</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Weather</string>
    <string name="today">Сегодня</string>
    <string name="temp_day_night">-2/+3 C°</string>
    <string name="windspeed">Скорость ветра (км/ч)</string>
    <string name="pressure">Давление (мм. рт. ст.)</string>
    <string name="now">Сейчас:</string>
    <string name="forecast">Прогноз на 3 дня:</string>
    <string name="lastupdated">Обновлено: </string>
    <string name="neverupdated">не обновлялось</string>
    <string name="celsius">°C</string>
    <string name="find">Поиск</string>
    <string name="nothingfound">Ничего не найдено</string>
    <string name="clear">Удалить города из памяти</string>
    <string name="start_upd">Start update</string>
    <string name="stop_upd">Stop update</string>
    <string name="city_name">city_name</string>
    <string name="background_settings">Background settings</string>
    <string name="eng_please">English please</string>
    <string name="every_min">(every N minuts)</string>

</resources>